<resources>
    <string name="app_name">Journal App</string>


    <string name="action_settings">Settings</string>


    <string name="add_note_activity_name">Add a New Journal</string>

   <string name="edit_note_description">Enter title&#8230;</string>
    <string name="edit_note_content">Enter text&#8230;</string>

    <string name="sign_out">Sign out</string>
    <string name="action_sign_out">Sign out</string>



    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">"Dont' have an account? Sign up now!"</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_sign_in_short">Register</string>

    <string name="journal_description">Journal icon</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="clear">Clear</string>
</resources>
